test/error/VarUninitialized.fu
public static class Test
{
	public static bool Run()
	{
		int x; //ERROR: Uninitialized variable
		Dictionary<string(), int> dict; //ERROR: Uninitialized variable
		return x == 5 && dict.ContainsKey("foo");
	}
}
